objects/Trigger_Controls__c.object
<CustomObject>
    <fields>
        <fullName>Check_Duplicate_Alias__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not to check duplicate aliases when a User record is saved</description>
        <label>Check for Duplicate User Aliases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giam_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Checked, Trigger is active.</description>
        <inlineHelpText>Uncheck the box to deactivate the Giam User trigger AND the CheckUserAliasDuplicates Trigger..  Check the box to activate it.</inlineHelpText>
        <label>Giam Trigger-User Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_s_Manager__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sets User&apos;s Manager based on the Manager PerNr on the User record.</description>
        <inlineHelpText>Populates the User&apos;s manager based on the Manager&apos;s PerNr.</inlineHelpText>
        <label>User&apos;s Manager</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>